<resources>
    <string name="app_name">CarFinder</string>
    <string name="title_activity_login">Iniciar Sesion</string>
    <string name="title_activity_register">Registro</string>

    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="back_exit">Pulsa de nuevo ATRAS para salir</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="error_invalid_email">El email no es correcto</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña no es correcta</string>
    <string name="error_field_required">Este campo es obligatorio</string>
    <string name="permission_rationale">"Es necesario otorgar permisos para acceder a internet."
    </string>
    <string name="message_register">No tienes cuenta? Registrate pulsando aqui!</string>
    <string name="register_button">Registrar</string>
    <string name="login_message">Iniciando Sesión, espere...</string>
    <string name="forgetPassword">¿Olvidaste la contraseña?</string>
    <string name="remember_password">Recordar Contraseña</string>

    <!-- Strings related to Forgotten Password -->
    <string name="Email_incorrect">¡Vaya, parece que el email introducido no se encuentra!</string>
    <string name="Email_correct"></string>

    <!-- Strings related to Register -->
    <string name="insertDatos_registro">Inserte sus datos</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="date">Fecha Naciemiento</string>
    <string name="Repetir_password">Repetir Contraseña</string>
    <string name="error_passwords_doesnt_match">Las contraseñas no coinciden</string>
    <string name="progress_register_message">Creando cuenta, espere...</string>
    <string name="register_ok">Cuenta creada con éxito!</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to MainActivity -->
    <string name="start">Inicio</string>
    <string name="cars">Coches</string>
    <string name="options">Ajustes</string>
    <string name="logoff">Cerrar Sesión</string>
    <string name="permission_error">No se puede utilizar esta app sin otorgar permisos de uso de localización.</string>

    <!-- String related to SettingsFragment -->
    <string name="title_settings">Ajustes</string>
    <string name="personal_data">DATOS PERSONALES</string>
    <string name="view_my_data">Ver mis datos</string>
    <string name="change_email">Cambiar Email</string>
    <string name="change_password">Cambiar contraseña</string>

    <!-- String related to CarsFragment -->
    <string name="title_cars">Mis coches</string>
    <string name="my_cars_message">Mis coches</string>
    <string name="matricula">Matrícula</string>
    <string name="Brand">Marca</string>
    <string name="Model">Modelo</string>
    <string name="Delete_car_message">Seguro que quiere borrar el coche?</string>

    <!-- String realated to FragmentMain -->
    <string name="delete_position">Borrar posición</string>
    <string name="error_not_car_select">No ha seleccionado ningún coche</string>
    <string name="saved_position">Posición guardada</string>
    <string name="deleted_position">Posición eliminada</string>

    <!-- String related to View my data-->
    <string name="nombre_dos_puntos">Nombre: </string>
    <string name="apellidos_dos_puntos">Apellidos: </string>
    <string name="email_dos_puntos">Email: </string>
    <string name="date_dos_puntos">Date: </string>


</resources>
