<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/ic_arrow_upward_black_24dp"
            android:title="@string/start" />
        <item
            android:id="@+id/coches"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/cars" />
        <item
            android:id="@+id/ajustes"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/options" />
    </group>

    <item android:title="Sesion">
        <menu>
            <item
                android:id="@+id/cerrarSesion"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/logoff" />
        </menu>
    </item>

</menu>
