<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_settings"
    tools:context="fdi.ucm.carfinder.SettingsFragment"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/personal_dataTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="27dp"
        android:text="@string/personal_data"/>

    <Button
        android:id="@+id/buttonView_my_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="20dp"
        android:text="@string/view_my_data"
        android:textAlignment="viewStart"
        android:layout_below="@+id/personal_dataTextField"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonChange_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonView_my_data"
        android:layout_below="@+id/buttonView_my_data"
        android:background="@color/colorPrimary"
        android:paddingLeft="20dp"
        android:text="@string/change_email"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/buttonChange_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/buttonChange_email"
        android:layout_below="@+id/buttonChange_email"
        android:background="@color/colorPrimary"
        android:paddingLeft="20dp"
        android:text="@string/change_password"
        android:textAlignment="viewStart" />

</RelativeLayout>
