<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="fdi.ucm.carfinder.RegisterActivity">

    <ProgressBar
        android:id="@+id/progress_register"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/progress_register_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_progress"
        android:layout_centerInParent="true"
        android:text="@string/progress_register_message"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/register_layout_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/insertDatos_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/insertDatos_registro"
                android:textColor="#FFFFFF"
                tools:layout_editor_absoluteX="162dp"
                tools:layout_editor_absoluteY="36dp" />

            <EditText
                android:id="@+id/nameTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/insertDatos_registro"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/lastnameTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/nameTextField"
                android:layout_below="@+id/nameTextField"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/apellidos"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/emailTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/lastnameTextField"
                android:layout_below="@+id/lastnameTextField"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/dateTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/emailTextField"
                android:layout_below="@+id/emailTextField"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date"
                android:focusable="false"/>

            <EditText
                android:id="@+id/password1TextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/dateTextField"
                android:layout_below="@+id/dateTextField"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/password2TextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/dateTextField"
                android:layout_below="@+id/password1TextField"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/Repetir_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/register_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password2TextField"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="46dp"
                android:text="@string/ok" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
