<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    android:id="@+id/popup_coches"
    android:weightSum="1">

    <EditText
        android:id="@+id/new_car_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="161dp"
        android:ems="10"
        android:hint="@string/Brand"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/new_car_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/new_car_brand"
        android:layout_below="@+id/new_car_brand"
        android:ems="10"
        android:hint="@string/Model"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/new_car_matr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/new_car_model"
        android:layout_below="@+id/new_car_model"
        android:ems="10"
        android:hint="@string/matricula"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_new_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_car_matr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="Ok" />
</RelativeLayout>

    <!-- android:id="@+id/email_forget_password" -->
    <!-- android:id="@+id/buttonEnviar" -->